<?xml version="1.0" encoding="UTF-8"?>
  
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
	android:layout_height="fill_parent"	
android:orientation="vertical">
<ImageView android:src="@drawable/floatec" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal"/>
<TableLayout
	
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"	
	>
    <TableRow android:layout_height="wrap_content" android:id="@+id/tableRow2" android:layout_width="fill_parent">
        <TextView android:id="@+id/textView2" android:padding="3dip" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/name_label"></TextView>
        <TextView android:id="@+id/textView3" android:padding="3dip" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/app_name"></TextView>
    </TableRow>
	
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		> 
		
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:padding="3dip"
			android:text="@string/version_label"/>
			
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/app_version"
			android:padding="3dip"
			/>
		
	</TableRow>
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/author_label"
			android:padding="3dip"
			/>
			
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/app_author"
			android:padding="3dip"
			/>
		
	</TableRow>
	<TableRow android:id="@+id/tableRow1" android:layout_height="wrap_content" android:layout_width="fill_parent">
		<TextView android:id="@+id/textView1" android:padding="3dip" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/hplabel"></TextView>
		<TextView android:padding="3dip" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/hp" android:id="@+id/hp" android:onClick="callHP" android:clickable="true"></TextView>
	</TableRow>
	<TableRow android:id="@+id/TableRow01" android:layout_height="wrap_content" android:layout_width="fill_parent">
		<TextView android:id="@+id/TextView01" android:padding="3dip" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/maillabel"></TextView>
		<TextView android:id="@+id/TextView02" android:padding="3dip" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/mail" android:onClick="callMail" android:clickable="true"></TextView>
	</TableRow>
	<TableRow android:id="@+id/TableRow02" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:padding="3dip" android:layout_width="fill_parent" android:id="@+id/TextView04" android:layout_height="wrap_content" android:text="@string/tanks_label"></TextView>
		<TextView android:padding="3dip" android:onClick="callMail" android:clickable="true" android:id="@+id/TextView03" android:layout_height="wrap_content" android:text="@string/thanks" android:layout_width="match_parent" android:fitsSystemWindows="true"></TextView>
	</TableRow>
	<TableRow android:id="@+id/TableRow02" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:padding="3dip" android:layout_width="fill_parent" android:id="@+id/TextView04" android:layout_height="wrap_content" android:text=" "></TextView>
		<TextView android:padding="3dip" android:onClick="callMail" android:clickable="true" android:id="@+id/TextView03" android:layout_height="wrap_content" android:text="@string/thanks2" android:layout_width="match_parent" android:fitsSystemWindows="true"></TextView>
	</TableRow>

</TableLayout>

</LinearLayout>